--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,71 @@
-#wrapper {
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
+body {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+#keyboard {
+  width: 690px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+textarea {
+  width: 685px;
+  height: 200px;
+}
+
+button {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+  margin-top: 5px;
+  background-color: rgba(0, 153, 153, 0.6);
+  border-radius: 5px;
+  font-family: 'Open Sans', sans-serif;
+  cursor: pointer;
+  outline: none;
+
+  &:hover {
+    background-color: rgba(0, 153, 153, 0.3);
+  }
+  &.selected {
+    border: black solid 2px;
+    box-shadow: inset 0 -30px rgba(0, 153, 153, 0.9);
+    transition: all 0.2s cubic-bezier(0, 0.85, 0.26, 2.03);
+  }
+  &.backspace {
     width: 100px;
-    height: 200px;
-    border: 1px solid black;
-    background-color: yellow;
+  }
+  &.tab {
+    width: 60px;
+  }
+  &.del {
+    width: 80px;
+  }
+  &.capslock {
+    width: 70px;
+  }
+  &.enter {
+    width: 70px;
+  }
+  &.shift {
+    width: 92.5px;
+  }
+  &.ctrl {
+    width: 48px;
+  }
+  &.win {
+    width: 50px;
+  }
+  &.alt {
+    width: 50px;
+  }
+  &.space {
+    width: 279px;
+  }
 }
